# GPUOpt

./: .bandit  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .trivyignore  Dockerfile  GUIDE.md  Makefile  README.md  RUNNING.md  SECURITY.md  alembic.ini  check_status.py  docker-compose.local.yml  docker-compose.yml  environments.example.yaml  environments.mock.yaml  gunicorn.conf.py  opencode.json  pyproject.toml  setup-gpuopt.ps1
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  RUNBOOK.md  SECURITY.md  inference-optimization.md
examples/: benchmark-real.json  manifest-spec.json  plan-8b.json
frontend/: index.html
migrations/: 001_initial_schema.sql  002_cluster_state.sql  003_baselines.sql  004_analyses.sql  005_recommendations.sql  006_rec_scoring.sql  007_digital_twin.sql  008_actuations.sql  009_domain_events.sql
models/: failure_predictor.pkl  rl_scheduler.pkl
scripts/: bootstrap_kind.sh  check_environment.sh  demo.py  migrate.py  run_inference_benchmark.sh  seed_comprehensive.py  seed_telemetry.py  setup_gpu_wsl.sh
tests/: conftest.py  test_actuation.py  test_advanced.py  test_agent_workload.py  test_alerting.py  test_analysis.py  test_api.py  test_auth_backends.py  test_auto_healer.py  test_chaos.py  test_cluster_algorithm.py  test_comprehensive.py  test_cost_analysis.py  test_cpu_catalog.py  test_deployment_workflow.py  test_digital_twin.py  test_domain_persistence.py  test_domains.py  test_e2e.py  test_environment_checks.py  test_extended_all.py  test_failure_predictor.py  (+40 more)
(+271 files in other folders)
